pico-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pico-service
  labels:
    app: pico-service
spec:
  selector:
    app: pico-service
  ports:
    - port: 80
      targetPort: http
