pico-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pico-service
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
spec:
  rules:
    - host: pico-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pico-service
                port:
                  number: 80
  tls:
    - hosts:
        - pico-service.example.com
      secretName: pico-service-tls
